minor edits to tex document

--- a/docs/object creator intermediate report/Intermediate_Report_Object_Creator.tex
+++ b/docs/object creator intermediate report/Intermediate_Report_Object_Creator.tex
@@ -72,15 +72,15 @@
 
 \section*{Design Specification}
 
-Our module will have four major components including a way to create an image, edit an image, save image, and a way to export the object as a JSON object. The Image Creation class will include functions to draw on a canvas, import an image, or use primitive shapes to construct each individual object. Image Creation will require a canvas, which will be provided by the Javascript Library. The canvas will report the coordinates of the object features, as to facilitate conversion into a .png format. Next, the Image Editing class will allow the user to manipulate the size and color of the object, while also providing access to an undo button. The functions of the Image Editing class will be accessible to the user through a toolbar type user interface. Thirdly, there will be a Save Image class which allows users to save pieces of their full object as as .png files. And finally, Export Object will be a class which is called upon exiting the canvas and will send the group of saved pieces to the Sharing Framework as a JSON object.
+Our module will have four major components including a way to create an image, edit an image, save image, and a way to export the object as a JSON object. The Image Creation class will include functions to draw on a canvas, import an image, or use primitive shapes to construct each individual object. Image Creation will require a canvas, which will be provided by the Javascript Library. The canvas will report the coordinates of the object to facilitate conversion into .png format. Next, the Image Editing class will allow the user to manipulate the size and color of the object, while also providing access to an undo button. The functions of the Image Editing class will be accessible to the user through a toolbar type user interface. Thirdly, there will be a Save Image class which allows users to save pieces of their full object as .png files. And finally, Export Object will be a class which is called upon exiting the canvas and will send the group of saved pieces to the Sharing Framework as a JSON object.
 
-This Image Creation window, along side our canvas window, will prompt begin drawing part. This prompt will acknowledge that the user is drawing a part of the character, which will be saved as a unique object. The user will be responsible for designating a name for the object, such as head.png, in order to be uniquely recognized for use in other modules. If the user chooses to draw their object, they will do so by drawing, naming, and saving each part individually. The Save Image class will save each piece as a .png file in a position in an array. When the user is finished saving each piece of their object, they will exit out of the Object creation window. This act of exiting will also call our Export Object class which will export the array of saved.png images to the Sharing Framework as a JSON object. Once on the sharing framework, the object and its pieces can be accessed and manipulated by other modules. Below, a full UML class diagram of these three major components and their functions are shown.
+The Image Creation window, alongside our canvas window, will prompt the user begin drawing a part. This prompt will acknowledge that the user is drawing a part of the character, which will be saved as a unique object. The user will be responsible for designating a name for the object, e.g. head.png, to identify it for use in other modules. If the user chooses to draw their character, they will do so by drawing, naming, and saving each part individually. The Save Image class will save each piece as a .png file in a position in an array. When the user is finished saving each piece of their object, they will exit out of the Object creation window. The act of exiting will call our Export Object class, which will export the array of saved .png images to the Sharing Framework as a JSON object(s). Once it is on the sharing framework, the object and its pieces can be accessed and manipulated by other modules. Below, full UML class diagrams of these three major components and their functions are shown.
 
 %------------------------------------------------
 
 \section*{Design Rationale}
 
-To create our model, we will be implementing an Abstract Factory software design pattern. We have chosen this design pattern because our module is based on creating objects but will create those objects in different fashions. The user can either import an image, draw, or build a character out of primitive geometric shapes. All three of these classes will accomplish the same goal of creating an image that will later be used as an object throughout the application. Our other classes will provide the functions of editing and saving this object. An Abstract Factory design pattern is defined as one which groups individual factories that have a common theme. And so, because all of our classes deal with the larger picture of creating an image and forming an object but do it in different forms, we believe that an Abstract Factory design pattern best fulfills the architecture we have laid out.
+To create our model, we will be implementing an Abstract Factory software design pattern. We have chosen this design pattern because our module is based on creating objects but will create those objects in different fashions. The user can either import an image, draw, or build a character out of primitive geometric shapes. All three of these classes will accomplish the same goal of creating an image that will later be used as an object throughout the application. Our other classes will provide the functions of editing and saving this object. An Abstract Factory design pattern is defined as one which groups individual factories that have a common theme. Because all of our classes deal with the larger picture of creating an image and forming an object but do it in different forms, we believe that an Abstract Factory design pattern best fulfills the architecture we have laid out.
 
 %------------------------------------------------
 
@@ -102,7 +102,7 @@ The current state of our module is at the end of the design and planning phase. 
 
 \includegraphics[scale=0.35]{Timeline}\\
 
-First of all, Todd will implement the canvas where all the drawing is taking place. Once we have the canvas working, we will work on implementing the basic drawing functions and saving function. The basic drawing functions are free-drawing function (Users will be able to draw dots/free-lines using mouse --Cody) and geometric-drawing function (Users will be able to draw basic geometric shapes like triangles/rectangles/circles, etc --Dongni \& Darren). At the same time, saving function (save the canvas as JSON object-- .png and pass it to sharing framework) will be implemented by Lauren. Each function will be tested separately and ready for the first integration.
+First of all, Todd will implement the canvas where all the drawing will place. Once we have the canvas working, we will work on implementing the basic drawing functions and saving function. The basic drawing functions are free-drawing function (Users will be able to draw dots/free-lines using mouse --Cody) and geometric-drawing function (Users will be able to draw basic geometric shapes like triangles/rectangles/circles, etc --Dongni \& Darren). At the same time, saving function (save the canvas as JSON object-- .png and pass it to sharing framework) will be implemented by Lauren. Each function will be tested separately and ready for the first integration.
 
 Integration 1 work:
 During this time,  we will put  the basic drawing function and saving functions together, test and adjust each function to make sure they will still be functional together. Also we will communicate with other teams to ensure that each module runs within the same system as the others.
