removes abs and prop sections, adds cls file

--- a/ImmReport/VisualEditorImReport.tex
+++ b/ImmReport/VisualEditorImReport.tex
@@ -26,7 +26,7 @@
 %\author{Author Name}
 
 %For multiple authors:
-\author{Graham Baker, Walker Bohannan, Steve Marx, Vikram Nilakantan, Jessica Penick and Eli Spiegel}
+\author{Graham Baker, Walker Bohannan, Steve Marx, Vikram Nilakantan, \newline Jessica Penick and Eli Spiegel}
 
 
 %If using runnningheads you can abbreviate the author name on even pages:
@@ -47,9 +47,9 @@
 
 \maketitle
 
-\begin{abstract}
-abstract text goes here - Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-\end{abstract}
+%\begin{abstract}
+%abstract text goes here - Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+%\end{abstract}
 
 \clearpage
 
@@ -91,13 +91,13 @@ A thorough UML class diagram (included) has been developed.  Also, a mock-up of 
 
 
 
-\begin{proposition}
-Insert proposition here
-\end{proposition}
+%\begin{proposition}
+%Insert proposition here
+%\end{proposition}
 
-\begin{proof}
-Insert proof here
-\end{proof}
+%\begin{proof}
+%Insert proof here
+%\end{proof}
 
 %The bibliography, done here without a bib file
 %This is the old BibTeX style for use with llncs.cls
