Added UI Mockup

--- a/VE Intermediate Report/VisualEditorReport.tex
+++ b/VE Intermediate Report/VisualEditorReport.tex
@@ -6,12 +6,10 @@
 % Template file to use for LLNCS papers prepared in LaTeX
 %websites for more information: http://www.springer.com
 %http://www.springer.com/lncs
-\usepackage{graphix}
 \documentclass{llncs}
+\usepackage{graphicx}
 %Use this line instead if you want to use running heads (i.e. headers on each page):
 %\documentclass[runningheads]{llncs}
-
-
 \begin{document}
 \title{Edith}
 
@@ -65,7 +63,12 @@ Alternative architectures considered were the layered model and the pipe and fil
 
 \subsection{UML Class Diagram}
 \subsubsection{}
-\includegraphics[]{visual_editor_uml.png}
+\includegraphics[scale=0.2]{visual_editor_uml.png}
+
+
+\subsection{User Interface Mock-Up}
+\subsubsection{}
+\includegraphics[scale=0.6]{UI.png}
 
 
 \section{Reflections and Status Update}
