--- a/VE Intermediate Report/VisualEditorReport.tex
+++ b/VE Intermediate Report/VisualEditorReport.tex
@@ -63,13 +63,17 @@ Alternative architectures considered were the layered model and the pipe and fil
 
 \subsection{UML Class Diagram}
 \subsubsection{}
-\includegraphics[scale=0.2]{visual_editor_uml.png}
+\noindent\makebox[\textwidth]{%
+\includegraphics[width=1.8\textwidth]{visual_editor_uml.png}}
 
+\clearpage
 
 \subsection{User Interface Mock-Up}
 \subsubsection{}
-\includegraphics[scale=0.6]{UI.png}
+\noindent\makebox[\textwidth]{%
+\includegraphics[width=1.0\textwidth]{UI.png}}
 
+\clearpage
 
 \section{Reflections and Status Update}
 
