Adding gantt chart

--- a/VE Intermediate Report/VisualEditorReport.tex
+++ b/VE Intermediate Report/VisualEditorReport.tex
@@ -95,6 +95,11 @@ In programming, as with anything, things take longer than expected. With a group
 \subsubsection{}
 A thorough UML class diagram (included) has been developed.  Also, a mock-up of the Visual Editor’s user interface has been created, and the team will begin building toward that design. Given the confusion on the VE module’s role and its interaction with other modules (as described above), progress toward concrete build steps on the editor has been limited.  Now that the team has additional clarity, the build pace will need to increase to provide the first demonstration on November 1.  
 
+\subsection{Timeline through Gantt Chart}
+\subsection{}
+\noindent\makebox[\textwidth]{%
+\includegraphics[width=1.0\textwidth]{gantt.png}}
+
 \subsection{Team Member Responsibilities and Contributions}
 \subsubsection{}We have done a good job of distributing work equitably and working together so far.  At this point, team members do not have assigned roles (e.g. GUI design, JSON specialist, etc.), and our work has consisted mainly of concept development and design.  Qualitatively, everyone has contributed and collaboratively worked toward the milestones (Requirements Specification and this Intermediate Report).  Quantitatively, call it 1/6 each.  Realistically, it is expected that not everyone will contribute exactly the same amount on each aspect of the program.  However, we do expect to contribute equally in total by the end of the project.  More specific roles will likely be assigned (at least for certain phases) as development pace increases.
 
