--- a/VE Intermediate Report/VisualEditorReport.tex
+++ b/VE Intermediate Report/VisualEditorReport.tex
@@ -96,7 +96,7 @@ In programming, as with anything, things take longer than expected. With a group
 A thorough UML class diagram (included) has been developed.  Also, a mock-up of the Visual Editor’s user interface has been created, and the team will begin building toward that design. Given the confusion on the VE module’s role and its interaction with other modules (as described above), progress toward concrete build steps on the editor has been limited.  Now that the team has additional clarity, the build pace will need to increase to provide the first demonstration on November 1.  
 
 \subsection{Timeline through Gantt Chart}
-\subsection{}
+\subsubsection{}
 \noindent\makebox[\textwidth]{%
 \includegraphics[width=1.0\textwidth]{gantt.png}}
 
