--- a/ASReport.tex
+++ b/ASReport.tex
@@ -27,15 +27,14 @@
 \item Parser
 \begin{enumerate}
 \item The Animation System will be receiving instructions for animations in JSON format. This subsystem will take the instructions and actually call the functions with correct inputs. Our required interface is JSON, but more specifically a JSON entry with the following elements:
-\item \{"function name" : "jump(x1, x2, y1, y2)", "Image Name": "example.png", "sound name": "soundFile.mp3"\}
-\item There will be some instructions that might not have some of these fields; 'null' will be acceptable.
+\item \{``function name" : ``jump(x1, x2, y1, y2)", ``Image Name": ``example.png", ``Audio File Name": ``soundFile.mp3"\}
+\item There will be certain instructions that might not have specific pieces of information, such as an animation without an associated sound. In a case where this occurs, input ``null" in the appropriate location.
 \end{enumerate}
 
 \item Controller
 \begin{enumerate}
-\item Once we have parsed JSON inputs into instructions, the next subsystem will carry out those instructions and make calls to the HTML5 canvas. This subsystem will have several important interactions with other pieces.
-\item This system will take the raw data about instructions- with files waiting to be loaded until the canvas is ready to actually animate. For example, this system takes the instruction to move to the right, and 'remembers' the last position of an object, and the new position with x=x+5 (example). This information will be stored in a 'frame' array so that fastforward/rewind will allow the user to 'step' through the program if they desire.
-\item This system will also take the instructions and call them on the canvas. Therefore, this is where the majority of functions that will be written, and can be called if given the correct input.
+\item Once we have parsed JSON inputs into separate instructions, the Controller subsystem will carry out those instructions and send media creation and display instructions to the HTML5 canvas. This component will have several important interactions.
+\item The Controller will take the raw data about the media instructions and creates a list of instructions to send to the HTML5 canvas. The instructions for the canvas will be stored in a Scene Array, which will later be useful for play(), pause(), and seek().
 \end{enumerate}
 
 \item Scene Array
@@ -45,9 +44,9 @@
 
 \item Interactions
 \begin{enumerate}
-\item The animation system will have no direct interaction with the ``programmer"; it is a part of the abstraction process we are doing on the animation to make it easier to do simple animations. Therefore, we have no mock-up of our end product, as it is reliant on the canvas created for us as well as buttons and other UI aspects we are not dealing with.
-\item The Animation System interacts with the Story Creator module, who feeds us the JSON instructions to be parsed and carried out. It also interacts with the visual editor team, which will be providing the images, sounds, etc. to be used following the JSON instructions. Finally, we will be giving our output to the (some other team here) to be painted on the canvas.
-\item The only other requirement for the Animation system is that we are using a 3rd party library, 'OCanvas', to make animations easier (and cooler!). This library works directly with an HTML5 canvas, so there are minimal if any changes from other teams. This can be found at http://ocanvas.org/docs
+\item The Animation System will have no direct interaction with the ``programmer" because the Animation System is a back-end module and is dependent on other frameworks and modules such as a canvas.
+\item The Animation System interacts with the Story Creator module, who feeds us the JSON instructions to be interpreted with the parser and carried out. It also interacts with the visual editor team, which will be providing the images, sounds, etc. to be used following the JSON instructions. Finally, we will be giving our output to the (some other team here) to be painted on the canvas.
+\item The only other requirement for the Animation System is that we are using a 3rd party library, ``OCanvas', to make animations easier and better looking. This library works directly with an HTML5 canvas, so there are minimal if any changes from other teams. This can be found at http://ocanvas.org/docs
 
 \end{enumerate}
 
