--- a/docs/StoryCreatorRequirements copy.tex
+++ b/docs/StoryCreatorRequirements copy.tex
@@ -24,17 +24,15 @@
 %ABSTRACT/SUMMARY
 %-------------------------------------------------------------------------------------------------------------
 \section{Summary}
-<<<<<<< HEAD:StoryCreatorRequirements copy.tex
-This SRS describes the requirements and specifications for the Story Creator module of the edith software, a system to help younger students learn to program. 
+This SRS describes the requirements and specifications for the Story Creator module of the edith software, a system to help younger students learn to program. \\
 
-=======
+======= \\ \\
 %<<<<<<< HEAD
 This SRS describes the requirements and specifications for the Story Creator module of the Edith software, a system to help younger students learn to program. The Story Creator module is used to combines the Sharing Framework, Object Creator, Visual Editor and Animation module in order to create a holistic view of Edith.  \\
 
 ======= \\ \\
 This SRS describes the requirements and specifications for the Story Creator module of the Edith software, a system to help younger students learn to program.
-%>>>>>>> 6fb1a11d9f7c7250a22a8bd7a9fcde25dff6c0f6
->>>>>>> 506379c6bc15722679e648896b8092500c123f44:docs/StoryCreatorRequirements copy.tex
+
 
 %-------------------------------------------------------------------------------------------------------------
 %INTRODUCTION
