adds Visual Editor fixes

--- a/docs/Story_Creator_Intermediate_Report/StoryCreator_IntermediateReport.tex
+++ b/docs/Story_Creator_Intermediate_Report/StoryCreator_IntermediateReport.tex
@@ -1,24 +1,11 @@
-%@author Brandon Roberts, Nate Olderman, Billy Rathje, DJ Maguddayao, Kyle Dybdal
-%@date 9/23/13
+%@author Nate Olderman%@date 9/23/13
 
 \documentclass[12pt]{article}
 \usepackage{graphicx}
+\usepackage{setspace}
+\doublespacing
 
 \begin{document}
-
-%-------------------------------------------------------------------------------------------------------------
-% TITLE PAGE
-%-------------------------------------------------------------------------------------------------------------
-
-\begin{titlepage}
-	\vspace*{\fill} %leave out given verticle space in a document
-	\begin{center}
-		{\Huge Story Creator Intermediate Report}\\ [0.5cm]	%make title huge and have .5cm space in between
-		{\Large Brandon Roberts, Nate Olderman, Billy Rathje, DJ Maguddayao, Kyle Dybdal}\\[0.4cm]
-		\today %put the date that the data is compiled
-	\end{center}
-	\vspace*{\fill}
-\end{titlepage}
 
 %------------------------------------------------------------------------------------------------------
 %DESIGN SPECIFICATION
