Adds storyFinalReport to Docs folder

--- a/docs/StoryCreatorRequirements copy.tex
+++ b/docs/StoryCreatorRequirements copy.tex
@@ -28,7 +28,7 @@ This SRS describes the requirements and specifications for the Story Creator mod
 
 ======= \\ \\
 %<<<<<<< HEAD
-This SRS describes the requirements and specifications for the Story Creator module of the Edith software, a system to help younger students learn to program. The Story Creator module is used to combines the Sharing Framework, Object Creator, Visual Editor and Animation module in order to create a holistic view of Edith.  \\
+This SRS describes the requirements and specifications for the Story Creator module of the Edith software, a system to help younger students learn to program. The Story Creator module is used to combine the Sharing Framework, Object Creator, Visual Editor and Animation module in order to create a holistic view of Edith.  \\
 
 ======= \\ \\
 This SRS describes the requirements and specifications for the Story Creator module of the Edith software, a system to help younger students learn to program.
@@ -44,7 +44,7 @@ This SRS describes the requirements and specifications for the Story Creator mod
 	Edith will be a web-based, educational system designed to help younger students develop an interest in and learn about programming. The user will be able to create a "story" by dragging and dropping objects, giving the objects animations, and creating ways for the user or other users to interact with their story. By doing this, students will be able to learn how relationships among objects work in programming.
 	\subsection{Scope}
 	%%Tried to get rid of all the "fluff" -DJ
-	The Story Creator module is intended to function as a display that integrates the work of the Animation System module and Visual Editor module in order to allow the user to create an animated story.  This module will employ the Visual Editor and Animation System module to interact with objects that are given by the Object Creator through a user interface combining the displays of the Animation System and Visual Editor module.  Story creator will add extra functionality to the Visual Editor and Animation System modules to interact with the Object Creator module in order to specify actions performed by the objects given by the Object Creator module.\
+	The Story Creator module is intended to function as a display that integrates the work of the Animation System module and Visual Editor module in order to allow the user to create an animated story.  This module will employ the Visual Editor and Animation System module to interact with objects that are given by the Object Creator through a user interface combining the displays of the Animation System and Visual Editor module.  Story creator will add extr functionality to the Visual Editor and Animation System modules to interact with the Object Creator module in order to specify actions performed by the objects given by the Object Creator module.\
 	\subsection{Purpose}
 	%basically rewrote this section while trying to find the best way to describe the purpose of our team -Nate
 	The purpose of the Story Creator section of the Edith software is to ensure that each other piece of the software can work together as a cohesive whole. This will be done through the user interface by providing a way for the user to select objects to choose actions and animations for each object. From there, the user will be able to interact in different ways with the animated objects that they have created and then finalize the "story" they have created so they can keep it or share it among friends. Story creator will construct these interactions between the pieces as well as a pleasant display view for the user.
