Allows objects to be added from the servergit status! Also report :(

--- a/docs/StoryFinalReport/StoryFinalReport.tex
+++ b/docs/StoryFinalReport/StoryFinalReport.tex
@@ -38,7 +38,15 @@ The Story Creator Module designed the Edith main page, login page, and sign up p
 % DEVELOPMENT PROCEDURES
 %-------------------------------------------------------------------------------------------------------------
 \section{Development Procedures}
+In order to complete Edith the Story Creator module followed the iterative, extreme programming, and the Boehm spiral model.  We initially used the Boehm spiral by determining our objectives,identifying risks, testing, and planning our next cycle.  We found quickly that this was not the most applicable because of the amount of changing requirements which forced us to throw away old code.  It transformed into an iterative model because we discovered that we had to repeatedly redo our entire module do to changing requirements and specifications from other groups and the project as a whole.  As deadlines drew near we found ourselves switching to the extreme programming model in order to solve issues/bugs and to complete large functions of the project as a whole.  \\
 
+We began with the functionality of receiving JSON objects, adding a time to them, and passing them on to other groups.  We also added the functionality to set a time to wait for a function (this was later transferred to Animation).  Later our requirements changed completely and we began creating the base view for the entire project.  We worked on incorporating the Visual Editor canvas into the main page, setup a main canvas, creating dummy buttons for different functionality, and the canvas for viewing objects.  From there we worked on design for the login page, main page, and the registration page.  We then worked on getting the Ajax calls up and working with the Sharing Framework.  We assisted the Object Creator and Sharing Framework modules with saving and loading from the database as well as setting up the save and load for the entire project.  We worked on connecting the various elements from the main page with the groups that they corresponded to.  This included loading data from the database and displaying it on the object canvas.  \\
+
+Our process was effective at developing functioning software but very ineffective because we created software that was never used or even thrown away.  We mostly implemented console log testing and used JSHint.  Our program works because the main page displays all canvases as well as allowing the other modules to function correctly on them.  The object panel at the bottom of the screen also displays the objects correctly.  Console log testing was effective for showing us how the page interprets the information that we were displaying.  JSHint was effective at showing us syntax errors in our code.  At times console log testing was ineffective at pointing out why our code was not functioning.  \\
+
+Nate was mainly responsible for main page javascript design. He also worked on general debugging as well as the tutorial for the system.
+
+Brandon was responsible for helping the Object Creator module and Sharing Framework gain access to the database with javascript.  This included writing load and save functions for the main page that sent and retrieved data.  Brandon was also in charge of porting the Visual Editor code and the Object Creator code so that it would function on the main page.  Finally Brandon was in charge of loading data from the database in order to draw objects on the object canvas that were clickable.  
 
 %-------------------------------------------------------------------------------------------------------------
 % REQUIREMENTS EVALUATION
